# volume-viewer

./: README.md  convert_to_tiff.sh  next.config.js  package-lock.json  package.json  verify_image.sh
public/images/: bitcoin.tiff  cell3.tiff  cesco.tiff  colony1_converted.tiff  dollars.tiff  face.tiff  hat.tiff  optical.tiff  optical3.tiff  rabbit.tiff
src/app/: layout.tsx  page.tsx
src/components/viewer/: VolumeViewer.tsx
src/rust/: Cargo.toml
src/rust/src/: camera.rs  lib.rs  renderer.rs  tiff_loader.rs  transfer_function.rs
