[package]
name = "volume-viewer"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]
[package.metadata.wasm-pack.profile.release]
wasm-opt = false

[profile.release]
opt-level = 's'
lto = true
panic = 'abort'


[dependencies]
wasm-bindgen = "0.2"
js-sys = "0.3"
web-sys = { version = "0.3", features = [
    "ImageData",
    "HtmlCanvasElement",
    "CanvasRenderingContext2d",
    "Document",
    "Window",
] }
nalgebra = "0.32.3"
image = { version = "0.24.7", features = ["tiff"] }
tiff = "0.9.0"
log = "0.4.20"
console_error_panic_hook = "0.1.7"
anyhow = "1.0.75"
